# test-gh-actions

./: CHANGELOG.md  README.md
.github/workflows/: build-docker-act-gh.yml  build-docker-latest.yml  build-docker-makefile.yml  dispatch.yml  docker.yml  draft-release.yaml  echo.yml  hello-world.yaml  (+10 more)
act-docker/: Dockerfile
docker/: Dockerfile  Makefile
python/: Makefile  pyproject.toml
python/example/: __init__.py
python/tests/: test_example.py  test_version.py
release/: .gitignore  .tgz.exclude  Makefile  event.json  fortune-0183abcd-f67d-4c20-8fae-b92ac5463334.md  fortune-04e44d56-d64a-40e7-b6b3-84a6c226a7d1.md  fortune-0bf927bf-993e-4b3d-b2f9-3563cb6230cb.md  fortune-0d46d3ef-4ca5-4a30-bf89-9ad9275989d1.md  fortune-111d8126-7c46-4d15-96fa-57b623c35bf0.md  fortune-212be604-e323-4935-9284-2e654dc0f5ff.md  fortune-2fee3f25-27e0-4897-8392-82b5b90aa8da.md  fortune-33aab8cb-c0c0-44a5-9e41-88195617ca2a.md  fortune-452ed25e-cdad-40b4-b6a0-7aa808e0202c.md  fortune-55f3f195-1224-4519-b43d-a84f8f4403ed.md  fortune-970e24ab-6cae-489f-8fbb-74d99657964d.md  fortune-985e7058-56e3-441c-a2a0-689846f23e3a.md  fortune-b3cbb59c-5465-439e-baaf-2d9e098c41e6.md  fortune-b42408a5-e3b8-4c5a-a161-9b5c4f0093f0.md  fortune-b5499373-05b6-4338-ab30-39795a997f43.md  fortune-b60858b6-cd47-4b99-a7b8-47b6c1acf1f1.md  fortune-d19a4ddb-7402-4fd2-8243-5b15dc8bc8c0.md  fortune-d648152f-a4cb-4690-b620-1ed8683113cd.md  fortune-ee1c8689-0198-4e16-9cb8-e0580485c13d.md  fortune-f4124aa0-ec3e-4d85-809c-933eebfe1749.md  fortune-fa686974-fd1a-4505-8ce9-197a2be120b4.md  fortune-test.md  fortune.md
